2000-03-31  olicha <olivier.chapuis@free.fr>

	* index.html:
	* icons.html:
	* sounds/*:
	Added some sounds distribution
	
2000-03-29  Hippo

	* mod_f2m_communication.html: Brought up to date with CVS fvwm.
	
2000-03-06  Dan Espen  <dane@mk.telcordia.com>

	* vector-buttons/testbed.fvwmrc: Remove typo and some commented out
 	stuff.

	* vector-buttons/DecorDemo3.fvwmrc, DecorDemo3.gif: Fix to minimize
 	button from Fabian Beutin.

2000-02-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.15

2000-02-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.14

2000-02-05  Dan Espen  <dane@mk.telcordia.com>

	* vector-buttons/vector-buttons.html: Added instructions on how to
	submit a vector button and a link to Jos van Riswick's Perl script.

	* vector-buttons/testbed.fvwmrc: Corrected missing specification of
	the color of the titlebar.

	* vector-buttons/DecorDemo3.fvwmrc,Decordemo3.gif: Added  push pin
 	from Jason   (jason@sdf.lonestar.org) and 2  nested  boxes buttons
 	from Fabian Beutin.

2000-02-04  Brad Giaccio  <bgiaccio@psrw.com>

	* fvwm-cats/index.html:
	* fvwm-cats/blaise.jpg: added my little girl

2000-01-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.13

2000-01-19  olicha <olivier.chapuis@free.fr>

	* screenshots/index.html:
	* screenshots/Olivier_Chapuis-panel{down,up}-{800x600,thumbnail}.gif:
	Addeed two screenshots in one

2000-01-12  Dan Espen  <dane@mk.telcordia.com>

	* icons.html: Add second banner file to table.

2000-01-08  Mikhael Goikhman  <migo@homemail.com>

	* screendhots: added Jason Kibblewhite's screentshot
	* fvwm-cats/index.html: fixed the title and bad html

1999-12-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html: increased version number to 2.3.12

1999-12-27  olicha <olivier.chapuis@free.fr>

	* fvwm-cats: Added lili.

1999-12-17  Mikhael Goikhman  <migo@homemail.com>
