@@ -12,10 +12,7 @@
     Here's a few other sites (besides the <a href="http://www.fvwm.org/">official</a> one) that have FVWM info:
 
     <ul>
-      <li><a href="http://www.fastlane.net/~sdboyd/index.shtml">Scott Boyd's Configuration Samples page</a>
       <li><a href="http://www.pcnet.com/~proteus/Fvwm/FvwmPatches.html">Bob Woodside's Miscellaneous patches</a>
-      <li><a href="http://www.python.org/~bwarsaw/pyware/">Barry Warsaw's
-	  Python/FVWM pages</a>
       <li><a href="http://www.oneway.com/fvwm/">Jay Kuri's Fvwm Module documentation in Palm Pilot format</a>
     </ul>
 
@@ -28,8 +25,8 @@
       canonical source for themes.
       <li><a href="http://www.plig.org/~xwinman/fvwm.html">Fvwm
       decorations</a> - Some screenshots and config files
-      <li><a href="http://fvwm2gnome.fluid.cx/todo.html">fvwm2gnome</a>
-	Themes and Gnome
+<!--       <li><a href="http://fvwm2gnome.fluid.cx/todo.html">fvwm2gnome</a> -->
+<!-- 	Themes and Gnome -->
     </ul>
 
     And here's a few others that have info on programs that are designed
@@ -39,7 +36,7 @@
       <li><a href="http://wm-icons.dhs.org/">Window Manager Icons</a> - efficient icon distribution to use with fvwm.
       <li><a href="http://www.imada.ou.dk/~blackie/dotfile/">The Dotfile Generator Home Page</a> - A program that helps you generate .emacs, .cshrc, .fvwmrc, etc.
       <li><a href="http://newton.physics.arizona.edu/~lapeyre/fvwmconf/index.html">John Lapeyre's FvwmConf</a>
-      <li><a href="http://www-personal.umich.edu/~markcrim/tkgoodstuff/">The TkGoodStuff Home Page</a> - A Tcl/Tk Program that performs like GoodStuff/FvwmButtons.
+<!--       <li><a href="http://www-personal.umich.edu/~markcrim/tkgoodstuff/">The TkGoodStuff Home Page</a> - A Tcl/Tk Program that performs like GoodStuff/FvwmButtons. -->
     </ul>
 
     And here's some window managers that were originally created from fvwm
@@ -50,7 +47,7 @@
       <li><a href="http://vicarious-existence.mit.edu/scwm/">SCWM</a> - The
 	Scheme Configurable Window Manager
       <li><a href="http://www.afterstep.org/">AfterStep</a> - A continuation of Bowman
-      <li><a href="ftp://mitac11.uia.ac.be/html-test/fvwm95.html">Fvwm95</a> - A hack of an fvwm2 beta that looks more like (shudder) Win95
+<!--       <li><a href="ftp://mitac11.uia.ac.be/html-test/fvwm95.html">Fvwm95</a> - A hack of an fvwm2 beta that looks more like (shudder) Win95 -->
     </ul>
 
     And here's an excellent site with all sorts of window manager
