@@ -1,3 +1,8 @@
+2000-04-01  Dan Espen  <dane@mk.telcordia.com>
+
+	* links.html: Remove dead and out of date links:
+	Tkgoodstuff, fvwm95, Scott Boyd, Barry Warsaw, fvwm2gnome.
+
 2000-03-31  olicha <olivier.chapuis@free.fr>
 
 	* index.html:
